--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.17",
+    "groq-sdk": "^0.37.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
