--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_GROQ_API_KEY=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
+GROQ_API_KEY=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
+PORT=3001
